fix issue with scrollbar in mobile

--- a/src/app/core/shared/navbar/containers/navbar.component.scss
+++ b/src/app/core/shared/navbar/containers/navbar.component.scss
@@ -51,13 +51,13 @@
   }
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-#navbarSupportedContent::-webkit-scrollbar {
-  display: none;
-}
+// /* Hide scrollbar for Chrome, Safari and Opera */
+// #navbarSupportedContent::-webkit-scrollbar {
+//   display: none;
+// }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-#navbarSupportedContent {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
+// /* Hide scrollbar for IE, Edge and Firefox */
+// #navbarSupportedContent {
+//   -ms-overflow-style: none;  /* IE and Edge */
+//   scrollbar-width: none;  /* Firefox */
+// }
